smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/control/control-statement-before-others.smithy
// Parse error at line 4, column 1 near `$v`: Expected a valid identifier character, but found '$'
namespace foo.baz

$version: "2.0"
